<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_email" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/user" />
		<Button android:id="@+id/check_contacts" 
	  android:text="@string/send_email"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
		
		<TextView android:id="@+id/contacts_name"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView android:id="@+id/contacts_tel"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView android:id="@+id/contacts_email"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		
	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/email" />
		<EditText android:id="@+id/email" 
		  android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
	
	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/phone" />
		<EditText android:id="@+id/phone_notif" 
		  android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
	
	</LinearLayout>
	
	<Button android:id="@+id/send_email" 
	  android:text="@string/send_email"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
	
	<Button android:id="@+id/call" 
	  android:text="@string/call"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	 <Button
        android:id="@+id/send_me_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_me_email" />

</LinearLayout>